cleaned working notebook and updated summarynotebook

--- a/WorkingNotebook.ipynb
+++ b/WorkingNotebook.ipynb
@@ -74,10 +74,6 @@
     "libraries_df = libraries_df.loc[(libraries_df[\"Data Year\"] == \"2017\"), :]\n",
     "libraries_df = libraries_df.dropna()\n",
     "\n",
-    "#libraries_df.drop(libraries_df[libraries_df[\"Metric Data\"]==\"NaN\"].index, inplace=True)\n",
-    "\n",
-    "#library_df = libraries_df.drop(libraries_df[libraries_df[\"Metric Data\"] == \"NaN\"].index, inplace=False)\n",
-    "\n",
     "#test_df = libraries_df.loc[libraries_df[\"Metric Data\"]==\"NaN\", :]\n",
     "libraries_df\n",
     "\n",
@@ -122,34 +118,10 @@
    "outputs": [],
    "source": [
     "combined_df = combined_df.dropna()\n",
-    "combined_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# library_visits_df = libraries_df.loc[libraries_df[\"Metric\"]==\"Visits\", :]\n",
+    "combined_df.head()\n",
     "\n",
-    "# #library_visits_df.dropna()\n",
-    "# #library_visits_df[\"Metric Data (INT)\"] = library_visits_df[\"Metric Data\"].astype(int)\n",
-    "\n",
-    "\n",
-    "# #library_visits_df.head(100)\n",
-    "# type_group_df = library_visits_df.groupby([\"Library Type\"]).sum()\n",
-    "\n",
-    "# type_group_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# PAM CODE HERE - start"
+    "#write combined to a CSV to show in SummaryNotebook\n",
+    "combined_df.to_csv(\"Resources/combined.csv\", index=False)"
    ]
   },
   {
@@ -183,6 +155,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#sort data to only pull visits for library visits per capita\n",
     "lib_pop_2017_visits_df = lib_pop_2017_df.loc[lib_pop_2017_df[\"Metric\"]==\"Visits\", :]\n",
     "\n",
     "lib_pop_2017_visits_df = lib_pop_2017_visits_df.dropna()\n",
@@ -196,6 +169,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#set up visits by type and generate a per capita result\n",
     "visits_by_type_df = lib_pop_2017_visits_df.groupby([\"Library Type\"]).sum()\n",
     "\n",
     "visits_by_type_df[\"Visits Per Capita\"] = visits_by_type_df[\"Metric Data\"]/visits_by_type_df[\"Population Amount\"]\n",
@@ -210,6 +184,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#pie chart of library visits per library type\n",
     "labels = visits_by_type_df[\"Library Type\"]\n",
     "\n",
     "library_types = visits_by_type_df[\"Visits Per Capita\"]\n",
@@ -236,6 +211,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#set up dataframe for count of libraries \n",
     "lib_pop_2017_amount_df = lib_pop_2017_df.loc[lib_pop_2017_df[\"Metric\"]==\"Libraries\", :]\n",
     "\n",
     "lib_pop_2017_amount_df = lib_pop_2017_amount_df.dropna()\n",
@@ -249,6 +225,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#set up groupby\n",
     "amount_by_type_df = lib_pop_2017_amount_df.groupby([\"Library Type\"]).sum()\n",
     "\n",
     "amount_by_type_df = amount_by_type_df.reset_index()\n",
@@ -262,6 +239,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#pie chart of amount of libraries per library\n",
     "labels = amount_by_type_df[\"Library Type\"]\n",
     "\n",
     "library_types = amount_by_type_df[\"Metric Data\"]\n",
@@ -279,24 +257,6 @@
     "# Save figure\n",
     "plt.savefig('Images/AmountOfLibrariesPerLibraryType.png')\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# PAM CODE HERE - end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ZOE CODE HERE - start"
    ]
   },
   {
@@ -421,6 +381,7 @@
     "\n",
     "plt.savefig('Images/physicalvisits_v_happiness_regress.png')\n",
     "\n",
+    "print(f'{rvalue}')\n",
     "plt.show()"
    ]
   },
@@ -490,25 +451,8 @@
     "\n",
     "plt.savefig('Images/physicalloans_v_happiness_regress.png')\n",
     "\n",
+    "print(f\"{rvalue}\")\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ZOE CODE HERE - end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# MALLORY CODE HERE - start"
    ]
   },
   {
@@ -576,24 +520,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# MALLORY CODE HERE - end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#ELLIE CODE HERE - start"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "libraries_df[\"Metric Data\"] = pd.to_numeric(libraries_df[\"Metric Data\"],errors=\"coerce\")"
    ]
   },
@@ -604,8 +530,7 @@
    "outputs": [],
    "source": [
     "#create DF to show only country and number of visits?\n",
-    "visits_df = libraries_df.loc[libraries_df[\"Metric\"]==\"Visits\", :]\n",
-    "visits_df.dtypes"
+    "visits_df = libraries_df.loc[libraries_df[\"Metric\"]==\"Visits\", :]"
    ]
   },
   {
@@ -615,7 +540,6 @@
    "outputs": [],
    "source": [
     "grouped_visits_df = visits_df.groupby(['Country or Area'])\n",
-    "print(grouped_visits_df)\n",
     "grouped_visits_df=grouped_visits_df.sum().head(20)"
    ]
   },
@@ -628,6 +552,7 @@
     "visit_number=grouped_visits_df.groupby(['Country or Area'])\n",
     "new_visits_df=visit_number.sum()\n",
     "new_visits_df = pd.DataFrame(grouped_visits_df[\"Metric Data\"])\n",
+    "new_visits_df = new_visits_df.rename(columns={\"Metric Data\": \"Visits\"})\n",
     "new_visits_df"
    ]
   },
@@ -650,7 +575,7 @@
     "# Library Visits per Country - Bar Graph \n",
     "plt.figure(figsize = (20,20))\n",
     "\n",
-    "plt.bar(x_axis,new_visits_df[\"Metric Data\"],color='b',alpha=0.5, align='edge')\n",
+    "plt.bar(x_axis,new_visits_df[\"Visits\"],color='b',alpha=0.5, align='edge')\n",
     "plt.xticks(tick_locations, new_visits_df.index,rotation=\"vertical\")\n",
     "\n",
     "plt.xlabel (\"Country\")\n",
@@ -664,15 +589,6 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ELLIE CODE HERE - end"
    ]
   },
   {
@@ -704,7 +620,9 @@
     "# Drop NaNs\n",
     "map_df = map_df.dropna()\n",
     "\n",
-    "map_df"
+    "map_df\n",
+    "#write combined to a CSV to show in SummaryNotebook\n",
+    "map_df.to_csv(\"Resources/map_data.csv\", index=False)"
    ]
   },
   {
@@ -739,8 +657,11 @@
     "# Add markers for visits \n",
     "visits_df = pd.merge(map_df, new_visits_df, left_on='Country', right_on='Country or Area')\n",
     "\n",
+    "#write combined to a CSV to show in SummaryNotebook\n",
+    "visits_df.to_csv(\"Resources/visits_count.csv\")\n",
+    "\n",
     "visit_locations = visits_df[[\"CapitalLatitude\",\"CapitalLongitude\"]].astype(float)\n",
-    "visits = visits_df[\"Metric Data\"].tolist()"
+    "visits = visits_df[\"Visits\"].tolist()"
    ]
   },
   {
@@ -775,6 +696,9 @@
     "\n",
     "lib_amt_df = lib_amt_df.head(10)\n",
     "\n",
+    "#write combined to a CSV to show in SummaryNotebook\n",
+    "lib_amt_df.to_csv(\"Resources/library_count.csv\", index=False)\n",
+    "\n",
     "lib_locations = lib_amt_df[[\"CapitalLatitude\",\"CapitalLongitude\"]].astype(float)\n",
     "\n",
     "lib_amt_df[\"Lib Per 100000\"] = lib_amt_df[\"Libraries Per Capita\"]*100000\n",
@@ -803,9 +727,7 @@
     "#<dt>Happiness Rank</dt><dd>{Happiness.Rank}</dd>\n",
     "# Store the DataFrame Row\n",
     "# NOTE: be sure to update with your DataFrame name\n",
-    "library_info = [info_box_template.format(**row) for index, row in lib_amt_df.iterrows()]\n",
-    "\n",
-    "library_info"
+    "library_info = [info_box_template.format(**row) for index, row in lib_amt_df.iterrows()]"
    ]
   },
   {
@@ -825,6 +747,13 @@
     "\n",
     "fig3"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -843,7 +772,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
