Final, clean with annotations

--- a/SummaryNotebook.ipynb
+++ b/SummaryNotebook.ipynb
@@ -34,7 +34,7 @@
     "### Describe the questions you asked, and why you asked them\n",
     "- What are some of the happiest countries? \n",
     "- What % of libraries are public? \n",
-    "- Are more public libraries in happier countries?\n",
+    "- Are there more libraries in happier countries?\n",
     "- Does visiting libraries make a happier country? \n",
     "- Do the amount of libraries make a happier country? "
    ]
@@ -223,7 +223,14 @@
    "metadata": {},
    "source": [
     "## Data Analysis\n",
-    "Discuss the steps you took to analyze the data... "
+    "Discuss the steps you took to analyze the data. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question: Are there more libraries in happier countries? "
    ]
   },
   {
@@ -303,6 +310,13 @@
     "fig3.add_layer(libraries_layer)\n",
     "\n",
     "fig3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question: Does library use make a happier country?"
    ]
   },
   {
@@ -445,13 +459,9 @@
     "# Summary\n",
     "Describe whether you were able to answer these questions and our findings.\n",
     "\n",
-    "Normalize library visits and count by population to generate a per capita number. \n",
-    "\n",
     "# Post Mortem\n",
     "Difficulties that arose, and how you dealt with them. \n",
-    "Additional questions that came up, but we didn't have time to answer.\n",
-    "\n",
-    "Our database was missing library data for many countries, if we had more time we could find ways to create a more complete database to include more countries. If we had more time we would have run an ANOVA on our data. "
+    "Additional questions that came up, but we didn't have time to answer."
    ]
   },
   {
