--- a/WorkingNotebook.ipynb
+++ b/WorkingNotebook.ipynb
@@ -26,11 +26,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#set csv paths\n",
     "csv_path_happiness = \"Resources/2017_happiness.csv\"\n",
     "csv_path_libraries = \"Resources/lmw_data_09_Feb_2021.csv\"\n",
     "csv_path_population = \"Resources/API_SP.POP.TOTL_DS2_en_csv_v2_2017895.csv\"\n",
     "csv_path_capitals = \"Resources/concap.csv\"\n",
     "\n",
+    "#read csv to dataframe\n",
     "happiness_df = pd.read_csv(csv_path_happiness)\n",
     "libraries_df = pd.read_csv(csv_path_libraries, encoding='latin-1')\n",
     "population_df= pd.read_csv(csv_path_population)\n",
@@ -45,7 +47,6 @@
    "source": [
     "# Limit capitals info\n",
     "capitals_df = capitals_df.loc[:,[\"CountryName\", \"CapitalLatitude\", \"CapitalLongitude\"]]\n",
-    "\n",
     "capitals_df"
    ]
   },
@@ -59,7 +60,6 @@
    "source": [
     "# Limit happiness_df to country and score only\n",
     "happiness_df = happiness_df.loc[:,[\"Country\", \"Happiness.Rank\", \"Happiness.Score\"]]\n",
-    "\n",
     "happiness_df.head()"
    ]
   },
@@ -71,13 +71,10 @@
    },
    "outputs": [],
    "source": [
+    "#reduce the libraries data to 2017\n",
     "libraries_df = libraries_df.loc[(libraries_df[\"Data Year\"] == \"2017\"), :]\n",
     "libraries_df = libraries_df.dropna()\n",
-    "\n",
-    "#test_df = libraries_df.loc[libraries_df[\"Metric Data\"]==\"NaN\", :]\n",
-    "libraries_df\n",
-    "\n",
-    "#test_df"
+    "libraries_df"
    ]
   },
   {
@@ -86,6 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#convert contents of libraries to numeric for later analysis\n",
     "libraries_df[\"Metric Data\"] = pd.to_numeric(libraries_df[\"Metric Data\"],errors=\"coerce\")"
    ]
   },
@@ -95,6 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#reduce population data to 2017\n",
     "population_df = population_df[[\"Country Name\", \"2017\"]]\n",
     "population_df = population_df.rename(columns={\"2017\":\"Population Amount\"})\n",
     "population_df.head()"
@@ -106,6 +105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#generate a combined database with happines, library, and population data\n",
     "combined_df = pd.merge(happiness_df, libraries_df, how='left', left_on=[\"Country\"], right_on=[\"Country or Area\"])\n",
     "combined_df = pd.merge(combined_df, population_df, how='left', left_on=[\"Country\"], right_on=[\"Country Name\"])\n",
     "combined_df"
@@ -117,6 +117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#drop incomplete datasets\n",
     "combined_df = combined_df.dropna()\n",
     "combined_df.head()\n",
     "\n",
@@ -130,10 +131,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "libraries_2017_df = libraries_df.loc[(libraries_df[\"Data Year\"] == \"2017\"), [\"Library Type\", \"Region\",\"Country or Area\", \"Metric\", \"Metric Data\"]]\n",
-    "                                \n",
-    "libraries_2017_df = libraries_2017_df.dropna()\n",
-    "                                         \n",
+    "#clean the libraries dataframe\n",
+    "libraries_2017_df = libraries_df.loc[(libraries_df[\"Data Year\"] == \"2017\"), \n",
+    "                                     [\"Library Type\", \"Region\",\"Country or Area\", \n",
+    "                                      \"Metric\", \"Metric Data\"]]                          \n",
+    "libraries_2017_df = libraries_2017_df.dropna()                               \n",
     "libraries_2017_df.head()"
    ]
   },
@@ -143,9 +145,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lib_pop_2017_df = pd.merge(libraries_2017_df, population_df, how='left', left_on=[\"Country or Area\"], right_on=[\"Country Name\"])\n",
-    "#lib_pop_2017_df[\"Metric Per Pop\"] = lib_pop_2017_df[\"Metric Data\"]/lib_pop_2017_df[\"Population Amount\"]\n",
-    "\n",
+    "#add population to clean libraries dataframe\n",
+    "lib_pop_2017_df = pd.merge(libraries_2017_df, population_df, how='left', \n",
+    "                           left_on=[\"Country or Area\"], right_on=[\"Country Name\"])\n",
     "lib_pop_2017_df"
    ]
   },
@@ -157,9 +159,7 @@
    "source": [
     "#sort data to only pull visits for library visits per capita\n",
     "lib_pop_2017_visits_df = lib_pop_2017_df.loc[lib_pop_2017_df[\"Metric\"]==\"Visits\", :]\n",
-    "\n",
     "lib_pop_2017_visits_df = lib_pop_2017_visits_df.dropna()\n",
-    "\n",
     "lib_pop_2017_visits_df"
    ]
   },
@@ -171,9 +171,7 @@
    "source": [
     "#set up visits by type and generate a per capita result\n",
     "visits_by_type_df = lib_pop_2017_visits_df.groupby([\"Library Type\"]).sum()\n",
-    "\n",
     "visits_by_type_df[\"Visits Per Capita\"] = visits_by_type_df[\"Metric Data\"]/visits_by_type_df[\"Population Amount\"]\n",
-    "\n",
     "visits_by_type_df = visits_by_type_df.reset_index()\n",
     "visits_by_type_df"
    ]
@@ -213,9 +211,7 @@
    "source": [
     "#set up dataframe for count of libraries \n",
     "lib_pop_2017_amount_df = lib_pop_2017_df.loc[lib_pop_2017_df[\"Metric\"]==\"Libraries\", :]\n",
-    "\n",
     "lib_pop_2017_amount_df = lib_pop_2017_amount_df.dropna()\n",
-    "\n",
     "lib_pop_2017_amount_df"
    ]
   },
@@ -227,9 +223,7 @@
    "source": [
     "#set up groupby\n",
     "amount_by_type_df = lib_pop_2017_amount_df.groupby([\"Library Type\"]).sum()\n",
-    "\n",
     "amount_by_type_df = amount_by_type_df.reset_index()\n",
-    "\n",
     "amount_by_type_df"
    ]
   },
@@ -461,6 +455,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#set up a dataframe with number of libraries\n",
     "number_libraries_df = combined_df.loc[combined_df[\"Metric\"] == \"Libraries\", :]"
    ]
   },
@@ -470,6 +465,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#set up a dataframe with number of libraries per capita\n",
     "number_group = number_libraries_df.groupby([\"Country\"])\n",
     "num_lib_df = number_group.sum()\n",
     "num_pop_df = number_group.max()\n",
@@ -487,6 +483,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#set up plot for Libraries per capita\n",
     "x_axis = np.arange(len(pop_lib_df))\n",
     "tick_locations = [value+0.4 for value in x_axis]"
    ]
@@ -520,6 +517,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#convert libraries dataframe from object to numberic when possible\n",
     "libraries_df[\"Metric Data\"] = pd.to_numeric(libraries_df[\"Metric Data\"],errors=\"coerce\")"
    ]
   },
@@ -529,7 +527,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#create DF to show only country and number of visits?\n",
+    "#create DF to show only number of visits\n",
     "visits_df = libraries_df.loc[libraries_df[\"Metric\"]==\"Visits\", :]"
    ]
   },
@@ -539,6 +537,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#group by country\n",
     "grouped_visits_df = visits_df.groupby(['Country or Area'])\n",
     "grouped_visits_df=grouped_visits_df.sum().head(20)"
    ]
@@ -549,6 +548,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Set up a new dataframe for visits grouped by country\n",
     "visit_number=grouped_visits_df.groupby(['Country or Area'])\n",
     "new_visits_df=visit_number.sum()\n",
     "new_visits_df = pd.DataFrame(grouped_visits_df[\"Metric Data\"])\n",
@@ -562,6 +562,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#set up plot for library visits per country\n",
     "x_axis = np.arange(len(new_visits_df))\n",
     "tick_locations = [value+0.5 for value in x_axis]"
    ]
@@ -592,10 +593,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Heatmaps"
    ]
